Remove JDK 9 features and logging from test code