@@ -4,7 +4,10 @@ import static org.junit.Assert.assertEquals;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -23,7 +26,7 @@ import org.testcontainers.junit.jupiter.Testcontainers;
 @Testcontainers
 class BeetleConnectionIT extends BaseBeetleIT {
 
-  private static final System.Logger logger = System.getLogger(BeetleConnectionIT.class.getName());
+  private static final Logger logger = Logger.getLogger(BeetleConnectionIT.class.getName());
 
   private static final int NUMBER_OF_MESSAGES = 5;
   private Channel singleBrokerChannel;
@@ -34,14 +37,14 @@ class BeetleConnectionIT extends BaseBeetleIT {
     ConnectionFactory factory = new ConnectionFactory();
     List<Connection> connections;
     try {
-      logger.log(System.Logger.Level.INFO, "Establishing connections to brokers...");
+      logger.log(Level.FINE, "Establishing connections to brokers...");
       connections =
           createConnections(TestContainerProvider.rabbitMQContainers, factory, 2)
               .collect(Collectors.toList());
       twoBrokersChannel = createChannel(connections);
-      singleBrokerChannel = createChannel(List.of(connections.get(0)));
+      singleBrokerChannel = createChannel(Collections.singletonList(connections.get(0)));
     } catch (Exception e) {
-      logger.log(System.Logger.Level.ERROR, "Channel creation failed.");
+      logger.log(Level.SEVERE, "Channel creation failed.");
     }
   }
 
